manifests/develop/piraeus/Service-piraeus-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: piraeus-operator
    app.kubernetes.io/instance: piraeus-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: piraeus-datastore
    app.kubernetes.io/version: v2.11.0
    helm.sh/chart: piraeus-2.11.0
  name: piraeus-operator-webhook-service
  namespace: piraeus-datastore
spec:
  ports:
    - name: https
      port: 443
      targetPort: 9443
  selector:
    app.kubernetes.io/component: piraeus-operator
    app.kubernetes.io/instance: piraeus-operator
    app.kubernetes.io/name: piraeus-datastore
  type: ClusterIP
