manifests/develop/piraeus/ValidatingWebhookConfiguration-piraeus-operator-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: piraeus-operator
    app.kubernetes.io/instance: piraeus-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: piraeus-datastore
    app.kubernetes.io/version: v2.10.8
    helm.sh/chart: piraeus-2.10.8
  name: piraeus-operator-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURrRENDQW5pZ0F3SUJBZ0lRVnFFTlVwN3FoSmwrNnJFMmdvdWFQVEFOQmdrcWhraUc5dzBCQVFzRkFEQkIKTVQ4d1BRWURWUVFERXpad2FYSmhaWFZ6TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzV3YVhKaApaWFZ6TFdSaGRHRnpkRzl5WlM1emRtTXdIaGNOTWpZd09EQTBNVEUwTlRRM1doY05Nell3T0RBeE1URTBOVFEzCldqQkJNVDh3UFFZRFZRUURFelp3YVhKaFpYVnpMVzl3WlhKaGRHOXlMWGRsWW1odmIyc3RjMlZ5ZG1salpTNXcKYVhKaFpYVnpMV1JoZEdGemRHOXlaUzV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFSwpBb0lCQVFEQmNz [...]
      service:
        name: piraeus-operator-webhook-service
        namespace: piraeus-datastore
        path: /validate-piraeus-io-v1-linstorcluster
    failurePolicy: Fail
    name: vlinstorcluster.kb.io
    rules:
      - apiGroups:
          - piraeus.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - linstorclusters
    sideEffects: None
    timeoutSeconds: 2
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURrRENDQW5pZ0F3SUJBZ0lRVnFFTlVwN3FoSmwrNnJFMmdvdWFQVEFOQmdrcWhraUc5dzBCQVFzRkFEQkIKTVQ4d1BRWURWUVFERXpad2FYSmhaWFZ6TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzV3YVhKaApaWFZ6TFdSaGRHRnpkRzl5WlM1emRtTXdIaGNOTWpZd09EQTBNVEUwTlRRM1doY05Nell3T0RBeE1URTBOVFEzCldqQkJNVDh3UFFZRFZRUURFelp3YVhKaFpYVnpMVzl3WlhKaGRHOXlMWGRsWW1odmIyc3RjMlZ5ZG1salpTNXcKYVhKaFpYVnpMV1JoZEdGemRHOXlaUzV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFSwpBb0lCQVFEQmNz [...]
      service:
        name: piraeus-operator-webhook-service
        namespace: piraeus-datastore
        path: /validate-piraeus-io-v1-linstornodeconnection
    failurePolicy: Fail
    name: vlinstornodeconnection.kb.io
    rules:
      - apiGroups:
          - piraeus.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - linstornodeconnections
    sideEffects: None
    timeoutSeconds: 2
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURrRENDQW5pZ0F3SUJBZ0lRVnFFTlVwN3FoSmwrNnJFMmdvdWFQVEFOQmdrcWhraUc5dzBCQVFzRkFEQkIKTVQ4d1BRWURWUVFERXpad2FYSmhaWFZ6TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzV3YVhKaApaWFZ6TFdSaGRHRnpkRzl5WlM1emRtTXdIaGNOTWpZd09EQTBNVEUwTlRRM1doY05Nell3T0RBeE1URTBOVFEzCldqQkJNVDh3UFFZRFZRUURFelp3YVhKaFpYVnpMVzl3WlhKaGRHOXlMWGRsWW1odmIyc3RjMlZ5ZG1salpTNXcKYVhKaFpYVnpMV1JoZEdGemRHOXlaUzV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFSwpBb0lCQVFEQmNz [...]
      service:
        name: piraeus-operator-webhook-service
        namespace: piraeus-datastore
        path: /validate-piraeus-io-v1-linstorsatellite
    failurePolicy: Fail
    name: vlinstorsatellite.kb.io
    rules:
      - apiGroups:
          - piraeus.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - linstorsatellites
    sideEffects: None
    timeoutSeconds: 2
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURrRENDQW5pZ0F3SUJBZ0lRVnFFTlVwN3FoSmwrNnJFMmdvdWFQVEFOQmdrcWhraUc5dzBCQVFzRkFEQkIKTVQ4d1BRWURWUVFERXpad2FYSmhaWFZ6TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzV3YVhKaApaWFZ6TFdSaGRHRnpkRzl5WlM1emRtTXdIaGNOTWpZd09EQTBNVEUwTlRRM1doY05Nell3T0RBeE1URTBOVFEzCldqQkJNVDh3UFFZRFZRUURFelp3YVhKaFpYVnpMVzl3WlhKaGRHOXlMWGRsWW1odmIyc3RjMlZ5ZG1salpTNXcKYVhKaFpYVnpMV1JoZEdGemRHOXlaUzV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFSwpBb0lCQVFEQmNz [...]
      service:
        name: piraeus-operator-webhook-service
        namespace: piraeus-datastore
        path: /validate-piraeus-io-v1-linstorsatelliteconfiguration
    failurePolicy: Fail
    name: vlinstorsatelliteconfiguration.kb.io
    rules:
      - apiGroups:
          - piraeus.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - linstorsatelliteconfigurations
    sideEffects: None
    timeoutSeconds: 2
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURrRENDQW5pZ0F3SUJBZ0lRVnFFTlVwN3FoSmwrNnJFMmdvdWFQVEFOQmdrcWhraUc5dzBCQVFzRkFEQkIKTVQ4d1BRWURWUVFERXpad2FYSmhaWFZ6TFc5d1pYSmhkRzl5TFhkbFltaHZiMnN0YzJWeWRtbGpaUzV3YVhKaApaWFZ6TFdSaGRHRnpkRzl5WlM1emRtTXdIaGNOTWpZd09EQTBNVEUwTlRRM1doY05Nell3T0RBeE1URTBOVFEzCldqQkJNVDh3UFFZRFZRUURFelp3YVhKaFpYVnpMVzl3WlhKaGRHOXlMWGRsWW1odmIyc3RjMlZ5ZG1salpTNXcKYVhKaFpYVnpMV1JoZEdGemRHOXlaUzV6ZG1Nd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFSwpBb0lCQVFEQmNz [...]
      service:
        name: piraeus-operator-webhook-service
        namespace: piraeus-datastore
        path: /validate-storage-k8s-io-v1-storageclass
    failurePolicy: Fail
    name: vstorageclass.kb.io
    rules:
      - apiGroups:
          - storage.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - storageclasses
    sideEffects: None
    timeoutSeconds: 2
